# 4h-voting

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  django_nginx.conf  docker-compose.yml  docker-entrypoint.sh  hello.py  nginx.conf  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt
.github/workflows/: build-push-container.yml
django_fingerprint/: apps.py  decorators.py  jinja.py  middleware.py  urls.py  views.py
django_fingerprint/templates/django_fingerprint/: login.html
django_fingerprint/templatetags/: django_fingerprint.py
mysite/: settings.py  urls.py
voting4h/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
voting4h/migrations/: 0001_initial.py  0002_alter_profile_vote_cutest_and_more.py  0002_manualballot.py  0003_show_ballot_show_pet_show.py  0004_manualballot_show.py  0005_userprofile.py  0006_alter_userprofile_options_userprofile_ip_address.py
voting4h/templates/voting4h/: graph.html  index.html  manual.html  results.html  success.html
