[project]
name = "voting4h"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==5.5.0",
    "asgiref==3.9.0",
    "attrs==25.3.0",
    "django==5.1.11",
    "django-thumbmark==0.2",
    "gunicorn==23.0.0",
    "jinja2==3.1.6",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "markupsafe==3.0.2",
    "narwhals==1.46.0",
    "numpy==2.3.1",
    "packaging==25.0",
    "pandas==2.3.1",
    "psycopg==3.2.9",
    "psycopg-binary==3.2.9",
    "python-dateutil==2.9.0.post0",
    "python-decouple==3.8",
    "pytz==2025.2",
    "referencing==0.36.2",
    "rpds-py==0.26.0",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "safety>=3.6.0",
]
